# Swingers

./: .clang-format  .clang-tidy  .clangd  .editorconfig  CMakeLists.txt  README.md
assets/: lighting.fs
src/: clock.cpp  clock.hpp  cmake.hpp.in  defer.cpp  defer.hpp  game.cpp  game.hpp  log.cpp  main.cpp  net.cpp  net.hpp  vec3.hpp
